# regclock

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  gdpr_breach_notification.py  sec_10k_apple.py
examples/data/: sec_events.jsonl  sec_obligations.yaml
regclock/: __init__.py  cli.py  i18n.py
regclock/emit/: __init__.py  documents.py  ics.py  report.py
regclock/evidence/: __init__.py  pack.py  record.py
regclock/io/: __init__.py  deontic.py  legalruleml.py
regclock/lifecycle/: __init__.py  events.py  schedule.py  state_machine.py
regclock/model/: __init__.py  amendment.py  calendar.py  obligation.py  recurrence.py
regclock/schemas/: __init__.py  types.py
regclock/templates/en/: filing_stub.md.j2  reminder_body.md.j2
regclock/utils/: __init__.py  fiscal.py  llm_client.py
tests/: test_calendar.py  test_fiscal.py  test_recurrence.py  test_state_machine.py
